build-logs-failed/build-parameterized-0.5.0.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - parameterized-0.5.0.0 (lib) (first run)
 - parameterized-0.5.0.0 (test:parameterized-test) (first run)
Configuring library for parameterized-0.5.0.0...
Preprocessing library for parameterized-0.5.0.0...
Building library for parameterized-0.5.0.0...

src/Parameterized/TypeLevel.hs:5:14: warning: [-Wdeprecated-flags]
    -XTypeInType is deprecated: use -XDataKinds and -XPolyKinds instead
  |
5 | {-# LANGUAGE TypeInType #-}
  |              ^^^^^^^^^^
[1 of 7] Compiling Parameterized.Control.Applicative
[2 of 7] Compiling Parameterized.Control.Monad
[3 of 7] Compiling Parameterized.Control.Monad.Trans.Reader

src/Parameterized/Control/Monad/Trans/Reader.hs:53:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
53 |          , c ~ AppendUnique a b
   |              ^

src/Parameterized/Control/Monad/Trans/Reader.hs:95:27: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
95 |          , Complement c b ~ a
   |                           ^

src/Parameterized/Control/Monad/Trans/Reader.hs:96:27: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
96 |          , Complement c a ~ b
   |                           ^

src/Parameterized/Control/Monad/Trans/Reader.hs:97:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
97 |          , c ~ Append a b
   |              ^

src/Parameterized/Control/Monad/Trans/Reader.hs:136:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
136 |          , c ~ AppendUnique a b
    |              ^

src/Parameterized/Control/Monad/Trans/Reader.hs:145:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
145 |          , c ~ AppendUnique a b
    |              ^

src/Parameterized/Control/Monad/Trans/Reader.hs:155:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
155 |          , c ~ AppendUnique a b
    |              ^
[4 of 7] Compiling Parameterized.Data.Semigroup
[5 of 7] Compiling Parameterized.Data.Monoid
[6 of 7] Compiling Parameterized.TypeLevel
[7 of 7] Compiling Parameterized.Control.Monad.Trans.State.Strict

src/Parameterized/Control/Monad/Trans/State/Strict.hs:54:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
54 |          , c ~ AppendUnique a b
   |              ^

src/Parameterized/Control/Monad/Trans/State/Strict.hs:71:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
71 |          , c ~ AppendUnique a b
   |              ^

src/Parameterized/Control/Monad/Trans/State/Strict.hs:89:14: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
89 |          , c ~ AppendUnique a b
   |              ^
Configuring test suite 'parameterized-test' for parameterized-0.5.0.0...
Preprocessing test suite 'parameterized-test' for parameterized-0.5.0.0...
Building test suite 'parameterized-test' for parameterized-0.5.0.0...
[1 of 3] Compiling Parameterized.Control.Monad.Trans.Reader.ReaderSpec

test/Parameterized/Control/Monad/Trans/Reader/ReaderSpec.hs:94:13: error: [GHC-88464]
    Variable not in scope: fetch :: Many '[Int] -> t
   |
94 |     let r = fetch @Int a
   |             ^^^^^

test/Parameterized/Control/Monad/Trans/Reader/ReaderSpec.hs:102:13: error: [GHC-88464]
    Variable not in scope: fetch :: Many '[Bool] -> t
    |
102 |     let r = fetch @Bool a
    |             ^^^^^
[2 of 3] Compiling Parameterized.Control.Monad.Trans.State.Strict.StateSpec

test/Parameterized/Control/Monad/Trans/State/Strict/StateSpec.hs:29:13: error: [GHC-88464]
    Variable not in scope: fetch :: Many '[Int] -> t
   |
29 |     let r = fetch @Int s
   |             ^^^^^

test/Parameterized/Control/Monad/Trans/State/Strict/StateSpec.hs:39:13: error: [GHC-88464]
    Variable not in scope: fetch :: Many '[Bool] -> t
   |
39 |     let r = fetch @Bool s
   |             ^^^^^
Error: [Cabal-7125]
Failed to build test:parameterized-test from parameterized-0.5.0.0.

